# Decepticon

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  demo.tape  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/decepticon-scan/: action.yml
.github/workflows/: ci.yml  comprehensive-ci.yml  release.yml
benchmark/: harness.py  reporter.py  schemas.py
benchmark/cve_bench/: README.md  __init__.py  dry_run.py  loader.py  runner.py  scorer.py
benchmark/providers/: buttercup.py
benchmark/results/cve-bench/: README.md  dry-run-2026-06-11.jsonl
clients/launcher/cmd/: onboard.go
clients/web/server/: terminal-server.ts
config/: gemini_handler.py  litellm_dynamic_config.py  litellm_startup.py
containers/: sandbox.Dockerfile  skillogy.Dockerfile
decepticon/agents/: __init__.py  decepticon.py  exploit.py  planner.py  postexploit.py  recon.py  soundwave.py
decepticon/agents/prompts/: __init__.py  language.md  recon.md  soundwave.md
decepticon/llm/: models.py
decepticon/middleware/: skills.py
docs/: mcp.md  models.md  setup-guide.md  skill-schema.md
docs/design/: 2026-06-04-bloodhound-kgstore-mapping.md  2026-06-04-slither-kgstore-mapping.md  2026-06-12-roe-guardrail-middleware-redesign.md  2026-06-12-skillogy-load-skill-by-name-pollution.md
docs/features/: blue-cell.md
docs/implementation/: agent-pool-defense.md  hardening-loop-engine.md  redgate-control-plane.md
docs/security/: sisyphus-pr.md
docs/tools/: web-search.md
skills/decepticon/engagement-lifecycle/: SKILL.md
skills/decepticon/engagement-startup/: SKILL.md
skills/decepticon/kill-chain-analysis/: SKILL.md
skills/decepticon/orchestration/: SKILL.md
skills/exploit/ad/: SKILL.md
skills/exploit/web/: SKILL.md
tests/: test_cve_bench_loader.py  test_cve_bench_scorer.py
(+52 files in other folders)
