[project]
name = "decepticon"
version = "1.0.0"
description = "AI-powered autonomous red team testing framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

authors = [
    { name = "Decepticon Team" }
]

keywords = [
    "ai", "security", "red-team", "penetration-testing",
    "llm", "langchain", "langgraph", "autonomous-agents"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # LLM
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-cli[inmem]>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "litellm>=1.60.0",
    # HTTP
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "deepagents>=0.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "basedpyright>=1.37.0",
]

[project.scripts]
decepticon = "decepticon.__main__:main"

[project.urls]
Homepage = "https://github.com/PurpleAILAB/Decepticon"
Repository = "https://github.com/PurpleAILAB/Decepticon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decepticon"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
